Created and updated the comments and the users collection
