# models/commentModel.js
@@ -1,0 +1,27 @@
+import mongoose from "mongoose";
+
+const commentSchema = new mongoose.Schema({
+    text: {
+        type: String,
+        required: true
+    },
+    userId: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "User",
+        required: true
+    },
+    projectId: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "Project"
+    },
+    taskId: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "Task"
+    },
+    createdAt: {
+        type: Date,
+        default: Date.now
+    }
+});
+
+export default mongoose.model("Comment", commentSchema);
